# oop

./: exam.md  readme.md
base/: CMakeLists.txt
base/labs/: lab5-tui.md  lab6-gui.md
base/practice4b-std-thread-matrix-multiplication/: CMakeLists.txt
base/practice5-determinant/: CMakeLists.txt
base/practice5-matrix-det-part1/: CMakeLists.txt  main.cpp
base/practice6-matrix-det-part2/: CMakeLists.txt  main.cpp
base/practice7-aquarium/: .editorconfig  CMakeLists.txt  cpp.hint  main.cpp  main_window.h  settings.h  settings_window.h  utils.h
base/practice8-integration/: CMakeLists.txt  function.cpp  function.h  integrator.cpp  integrator.h  main.cpp
base/practice8-integration/functions/: polynomial_function.cpp  polynomial_function.h
base/practice8-integration/integrators/: monte_carlo_integrator.cpp  monte_carlo_integrator.h  newton_leibniz_integrator.cpp  newton_leibniz_integrator.h  riemann_sum_integrator.cpp  riemann_sum_integrator.h
electives-advanced/: task6-c-vmt.md  task7-stl-iterators.md  task8-polymorphic-iterators.md
